fixed the issue with contact form send button background on mobile

--- a/src/contact.scss
+++ b/src/contact.scss
@@ -165,6 +165,11 @@ section.sec-form form div.google-captcha {
         }
       }
     }
+
+    .btn-container a.btn-more .btn-more-ripple span:not(.active, .invalid),
+     .btn-container button.btn-more .btn-more-ripple span:not(.active, .invalid) {
+      background-color: #1a1a1a;
+    }
   }
 }
 
